# YNstock

./: .gitignore  1.sql  README.md  main.py  pyproject.toml  ws_market_data_demo.py
config/: .env.example
docs/: api.md  architecture.md  deployment.md
skills/: code_review_skill.py  git_push_tool.py
src/scripts/data_collection/: batch_collect.py  realtime_collect.py
src/scripts/db/: import_data.py
src/ynstock/: main.py
src/ynstock/core/: config.py  constants.py  exceptions.py  models.py
src/ynstock/utils/: helpers.py  logger.py  validators.py  visualization.py
tests/: conftest.py
tests/integration/: test_main.py  test_websocket.py
work/: README.md  stock_data.db  to_sqlite.py
work/company/: get_all_stock_company.py
work/compony/: get_all_stock_company.py
work/compony/csv/: 实时市值+所属板块.csv  股票代码+名称.csv
work/marketdata/: config.py  demo.py  jq_demo.ipynb  jqdata_client.py  models.py  websocket_handler.py
work/stock/: baostock_fetcher.py  baostock_simple_demo.py  batch_get_stock_minite.py  batch_get_stock_value.py  draw_boxplot.py  real_time_stock.py
work/stock/stock_data/: 000001.csv  000002.csv  000004.csv  000006.csv  000007.csv  000008.csv  000009.csv  000010.csv  000011.csv  000012.csv  000014.csv  000016.csv  000017.csv  000019.csv  000020.csv  000021.csv  000025.csv  000026.csv  000027.csv  000028.csv  000029.csv  000030.csv  000031.csv  000032.csv  000034.csv  000035.csv  000036.csv  000037.csv  000039.csv  000042.csv  000045.csv  000048.csv  000049.csv  000050.csv  000055.csv  000056.csv  000058.csv  000059.csv  000060.csv  000061.csv  (+1786 more)
(+4588 files in other folders)
