[project]
name = "fastapiproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "akshare>=1.18.30",
    "baostock>=0.8.9",
    "fastapi>=0.133.1",
    "pandas>=3.0.1",
    "uvicorn>=0.41.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]
